[tool.poetry]
name = "simple_note_taker"
version = "0.1.3"
description = "A simple CLI Notetaker with options for centralization and summaries for teams"
license = "GPL-3.0-or-later"
authors = ["Toby Devlin <toby@tobydevlin.com>"]
readme = 'README.md'
repository = "https://github.com/GitToby/simple_note_taker"
classifiers = [
    "Development Status :: 3 - Alpha"
]

[tool.poetry.scripts]
snt = "simple_note_taker.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"
colorama = "^0.4.4"
tinydb = "^4.4.0"
tinydb-serialization = "^2.1.0"
pytest-cov = "^2.11.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
