[tool.poetry]
name = "simple_note_taker"
version = "0.2.2"
description = "A simple CLI Notetaker with magic commands and options for centralization and summaries for teams"
license = "Apache-2.0"
authors = ["Toby Devlin <toby@tobydevlin.com>"]
readme = 'README.md'
repository = "https://github.com/GitToby/simple_note_taker"
classifiers = [
    "Development Status :: 3 - Alpha"
]

[tool.poetry.scripts]
snt = "simple_note_taker.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"
colorama = "^0.4.4"
tinydb = "^4.4.0"
tinydb-serialization = "^2.1.0"
pytest-cov = "^2.11.1"
pydantic = "^1.8.1"
pytimeparse = "^1.1.8"
fuzzywuzzy = "^0.18.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
black = { version = "^20.8b1", allow-prereleases = true }

[tool.pytest.ini_options]
minversion = "6.0"
console_output_style = "count"
addopts = "-v --cov=simple_note_taker --cov-report html --cov-report term"
testpaths = [
    "tests"
]

[tool.black]
line-length = 120
target-version = ['py38']

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
