[project]
authors = [
    { name = "Toby Devlin", email = "toby@tobydevlin.com" },
]
requires-python = ">=3.7"
name = "simple_note_taker"
dynamic = ["version"]
description = "A simple CLI Notetaker with magic commands and options for centralization and summaries for teams"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License"
]
license = "Apache License 2.0"

dependencies = [
    "typer<1.0.0,>=0.3.2",
    "colorama<1.0.0,>=0.4.4",
    "tinydb<5.0.0,>=4.4.0",
    "tinydb-serialization<3.0.0,>=2.1.0",
    "pydantic<2.0.0,>=1.8.1",
    "pytimeparse<2.0.0,>=1.1.8",
    "rapidfuzz>=2.13.7",
    "setuptools-scm>=7.1.0",
]

[tool.pdm.dev-dependencies]
dev = [
    "pytest<7.0.0,>=6.2.2",
    "pytest-cov<3.0.0,>=2.11.1",
    "black<21.0,>=20.8b1",
    "typer-cli<1.0.0,>=0.0.11",
    "ruff>=0.0.252",
]


[tool.pytest.ini_options]
minversion = "6.0"
console_output_style = "count"
addopts = "-v --cov=simple_note_taker --cov-report html --cov-report term"
testpaths = [
    "tests"
]


[tool.ruff]
select = ["E", "F", "B"]
fixable = ["E", "F", "B"]
ignore = ["B008"]

line-length = 120

[tool.ruff.mccabe]
max-complexity = 10

[tool.black]
line-length = 120

[tool.pdm]
version = { source = "scm" }

[tool.pdm.build]
includes = []

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[project.urls]
repository = "https://github.com/GitToby/simple_note_taker"
pypi = "https://pypi.org/project/simple-note-taker/"

[project.scripts]
snt = "simple_note_taker.main:app"
